fix: No wrapping of content buttons.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,9 +114,10 @@ mat-icon {
 .contentButton {
     margin: 0 5px !important;
     border: 1px solid mat-color($rmm-default-primary) !important;
-    padding: 7px 5px 5px 5px !important;
+    padding: 5px 5px 3px 5px !important;
     line-height: 1.5em !important;
     text-decoration: none !important;
+    white-space: nowrap;
 }
 
 .mainTextContent {
